@@ -34,31 +34,28 @@ import android.os.RemoteException;
 import android.os.ServiceManager;
 import android.text.TextUtils;
 import android.util.ArrayMap;
-import android.util.ArraySet;
 import android.util.Log;
 
 import com.android.internal.annotations.GuardedBy;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Executor;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 /**
- * This API is not generally intended for third party application developers. Use the
- * <a href="{@docRoot}jetpack/androidx.html">AndroidX</a>
- * <a href="{@docRoot}reference/androidx/mediarouter/media/package-summary.html">Media Router
+ * This API is not generally intended for third party application developers.
+ * Use the <a href="{@docRoot}jetpack/androidx.html">AndroidX</a>
+  <a href="{@docRoot}reference/androidx/mediarouter/media/package-summary.html">Media Router
  * Library</a> for consistent behavior across all devices.
  *
- * <p>MediaRouter2 allows applications to control the routing of media channels and streams from
- * the current device to remote speakers and devices.
+ * Media Router 2 allows applications to control the routing of media channels
+ * and streams from the current device to remote speakers and devices.
  */
 // TODO(b/157873330): Add method names at the beginning of log messages. (e.g. selectRoute)
 //       Not only MediaRouter2, but also to service / manager / provider.
@@ -303,9 +300,9 @@ public final class MediaRouter2 {
         mManagerCallback = new ManagerCallback();
         mHandler = new Handler(Looper.getMainLooper());
         mSystemController = new SystemRoutingController(
-                ensureClientPackageNameForSystemSession(
-                        sManager.getSystemRoutingSession(clientPackageName)));
-        mDiscoveryPreference = sManager.getDiscoveryPreference(clientPackageName);
+                ensureClientPackageNameForSystemSession(sManager.getSystemRoutingSession()));
+        mDiscoveryPreference = new RouteDiscoveryPreference.Builder(
+                sManager.getPreferredFeatures(clientPackageName), true).build();
         updateAllRoutesFromManager();
 
         // Only used by non-system MediaRouter2.
@@ -478,8 +475,13 @@ public final class MediaRouter2 {
             if (mShouldUpdateRoutes) {
                 mShouldUpdateRoutes = false;
 
-                mFilteredRoutes = Collections.unmodifiableList(
-                        filterRoutes(List.copyOf(mRoutes.values()), mDiscoveryPreference));
+                List<MediaRoute2Info> filteredRoutes = new ArrayList<>();
+                for (MediaRoute2Info route : mRoutes.values()) {
+                    if (route.hasAnyFeatures(mDiscoveryPreference.getPreferredFeatures())) {
+                        filteredRoutes.add(route);
+                    }
+                }
+                mFilteredRoutes = Collections.unmodifiableList(filteredRoutes);
             }
         }
         return mFilteredRoutes;
@@ -1057,49 +1059,11 @@ public final class MediaRouter2 {
                 .build();
     }
 
-    private List<MediaRoute2Info> getSortedRoutes(List<MediaRoute2Info> routes,
-            RouteDiscoveryPreference preference) {
-        if (!preference.shouldRemoveDuplicates()) {
-            return routes;
-        }
-        Map<String, Integer> packagePriority = new ArrayMap<>();
-        int count = preference.getDeduplicationPackageOrder().size();
-        for (int i = 0; i < count; i++) {
-            // the last package will have 1 as the priority
-            packagePriority.put(preference.getDeduplicationPackageOrder().get(i), count - i);
-        }
-        ArrayList<MediaRoute2Info> sortedRoutes = new ArrayList<>(routes);
-        // take the negative for descending order
-        sortedRoutes.sort(Comparator.comparingInt(
-                r -> -packagePriority.getOrDefault(r.getPackageName(), 0)));
-        return sortedRoutes;
-    }
-
     private List<MediaRoute2Info> filterRoutes(List<MediaRoute2Info> routes,
-            RouteDiscoveryPreference discoveryPreference) {
-
-        Set<String> deduplicationIdSet = new ArraySet<>();
-
-        List<MediaRoute2Info> filteredRoutes = new ArrayList<>();
-        for (MediaRoute2Info route : getSortedRoutes(routes, discoveryPreference)) {
-            if (!route.hasAnyFeatures(discoveryPreference.getPreferredFeatures())) {
-                continue;
-            }
-            if (!discoveryPreference.getAllowedPackages().isEmpty()
-                    && (route.getPackageName() == null
-                    || !discoveryPreference.getAllowedPackages()
-                            .contains(route.getPackageName()))) {
-                continue;
-            }
-            if (discoveryPreference.shouldRemoveDuplicates()) {
-                if (!Collections.disjoint(deduplicationIdSet, route.getDeduplicationIds())) {
-                    continue;
-                }
-                deduplicationIdSet.addAll(route.getDeduplicationIds());
-            }
-            filteredRoutes.add(route);
-        }
-        return filteredRoutes;
+            RouteDiscoveryPreference discoveryRequest) {
+        return routes.stream()
+                .filter(route -> route.hasAnyFeatures(discoveryRequest.getPreferredFeatures()))
+                .collect(Collectors.toList());
     }
 
     private void updateAllRoutesFromManager() {
@@ -2083,17 +2047,19 @@ public final class MediaRouter2 {
         }
 
         @Override
-        public void onDiscoveryPreferenceChanged(@NonNull String packageName,
-                @NonNull RouteDiscoveryPreference preference) {
+        public void onPreferredFeaturesChanged(@NonNull String packageName,
+                @NonNull List<String> preferredFeatures) {
             if (!TextUtils.equals(mClientPackageName, packageName)) {
                 return;
             }
 
             synchronized (mLock) {
-                mDiscoveryPreference = preference;
+                mDiscoveryPreference = new RouteDiscoveryPreference.Builder(
+                        preferredFeatures, true).build();
             }
+
             updateAllRoutesFromManager();
-            notifyPreferredFeaturesChanged(preference.getPreferredFeatures());
+            notifyPreferredFeaturesChanged(preferredFeatures);
         }
 
         @Override
